--- a/nzbhydra.cfg
+++ b/nzbhydra.cfg
@@ -226,7 +226,22 @@
         }, 
         "enableCategorySizes": true
     }, 
-    "downloaders": [], 
+    "downloaders": [
+        {
+            "downloadType": "nzb", 
+            "enabled": true, 
+            "host": "nzbget", 
+            "iconCssClass": "", 
+            "name": "NZBGet", 
+            "nzbAddingType": "link", 
+            "nzbaccesstype": "redirect", 
+            "password": "", 
+            "port": 6789, 
+            "ssl": false, 
+            "type": "nzbget", 
+            "username": ""
+        }
+    ], 
     "indexers": [
         {
             "accessType": "both", 
@@ -320,7 +335,7 @@
         "debug": false, 
         "dereferer": "http://www.dereferer.org/?$s", 
         "downloadCounterExecuted": true, 
-        "externalUrl": null, 
+        "externalUrl": "", 
         "firstStart": 1552226731, 
         "flaskReloader": false, 
         "gitPath": null, 
