--- a/nzbhydra.cfg
+++ b/nzbhydra.cfg
@@ -335,7 +335,7 @@
         "debug": false, 
         "dereferer": "http://www.dereferer.org/?$s", 
         "downloadCounterExecuted": true, 
-        "externalUrl": "", 
+        "externalUrl": null, 
         "firstStart": 1552226731, 
         "flaskReloader": false, 
         "gitPath": null, 
