--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -222,6 +222,8 @@ services:
       - PGID=1000
       - PUID=1000
       - TZ=${TZ}
+    ports:
+      - 3579:3579
     networks:
       - app_net
     healthcheck:
