--- a/nzbget.conf
+++ b/nzbget.conf
@@ -157,7 +157,7 @@ Server1.Active=yes
 #
 # The name is used in UI and for logging. It can be any string, you
 # may even leave it empty.
-Server1.Name=
+Server1.Name=xennews
 
 # Level (priority) of news server (0-99).
 #
@@ -197,10 +197,10 @@ Server1.Optional=no
 Server1.Group=0
 
 # Host name of news server.
-Server1.Host=my.newsserver.com
+Server1.Host=ssl.xennews.com
 
 # Port to connect to (1-65535).
-Server1.Port=119
+Server1.Port=563
 
 # User name to use for authentication.
 Server1.Username=user
@@ -215,7 +215,7 @@ Server1.JoinGroup=no
 #
 # NOTE: By changing this option you should also change the option <ServerX.Port>
 # accordingly because unsecure and encrypted connections use different ports.
-Server1.Encryption=no
+Server1.Encryption=yes
 
 # Cipher to use for encrypted server connection.
 #
@@ -238,7 +238,7 @@ Server1.Encryption=no
 Server1.Cipher=
 
 # Maximum number of simultaneous connections to this server (0-999).
-Server1.Connections=4
+Server1.Connections=8
 
 # Server retention time (days).
 #
