fix nzbhydra pull nzb

--- a/nzbhydra.cfg
+++ b/nzbhydra.cfg
@@ -335,7 +335,7 @@
         "debug": false, 
         "dereferer": "http://www.dereferer.org/?$s", 
         "downloadCounterExecuted": true, 
-        "externalUrl": null, 
+        "externalUrl": "http://nzbhydra:5075", 
         "firstStart": 1552226731, 
         "flaskReloader": false, 
         "gitPath": null, 
@@ -369,7 +369,7 @@
         "startupBrowser": true, 
         "theme": "grey", 
         "urlBase": "/nzbhydra", 
-        "useLocalUrlForApiAccess": true, 
+        "useLocalUrlForApiAccess": false, 
         "verifySsl": true
     }, 
     "searching": {
