--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - "duckdns"
       - "sonarr"
       - "radarr"
+      - "bazarr"
       - "nzbget"
       - "plex"
       - "ombi"
