--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+version: '3.6'
 
 services:
 
@@ -255,6 +255,24 @@ services:
      retries: 20
 
 #
+# portainer
+# Portainer is a lightweight management UI which allows you to easily manage your Docker host or Swarm cluster.
+#
+  portainer:
+    image: portainer/portainer
+    container_name: portainer
+    privileged: true
+    restart: always
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /home/centos/portainer:/data
+    command: ["--host", "unix:///var/run/docker.sock", "--admin-password-file", "/run/secrets/portainer_secret"]
+    secrets:
+      - portainer_secret
+    networks:
+      - app_net
+
+#
 # watchtower
 # Watchtower is an application that will monitor your running Docker containers and watch for changes to the images that those containers were originally started from.
 # If watchtower detects that an image has changed, it will automatically restart the container using the new image.
@@ -268,6 +286,16 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     command: --cleanup
 
+#
+# secrets
+#
+secrets:
+  portainer_secret:
+    file: ./portainer_secret.txt
+
+#
+# network
+#
 networks:
   app_net:
     driver: bridge
