--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.6'
+version: '3.7'
 
 services:
 
@@ -31,7 +31,7 @@ services:
       - /home/centos/letsencrypt:/config
       - /home/centos/lightsail-htpc/nginx:/config/nginx/site-confs/default
     depends_on:
-      - "duckdns"
+      - "noip"
       - "sonarr"
       - "radarr"
       - "bazarr"
@@ -49,21 +49,21 @@ services:
      retries: 20
 
 #
-# duckdns
-# Duckdns is a free service which will point a DNS (sub domains of duckdns.org) to an IP of your choice. 
-# The service is completely free, and doesn't require reactivation or forum posts to maintain its existence.
+# no-ip
+# This is a simple Docker container for running the No-IP2 dynamic DNS update script. 
+# It will keep your domain.ddns.net DNS alias up-to-date as your home IP changes.
 #
-  duckdns:
-    image: linuxserver/duckdns
-    container_name: duckdns
+  no-ip:
+    image: coppit/no-ip
+    container_name: noip
     restart: always
+    volumes:
+      - /etc/localtime:/etc/localtime
+      - /home/centos/noip:/config
+      - /home/centos/lightsail-htpc/noip.conf:/config/noip.conf
     environment:
-      - PUID=1000 #optional
       - PGID=1000 #optional
-      - TZ=${TZ}
-      - SUBDOMAINS=${URL}
-      - TOKEN=${TOKEN}
-      - LOG_FILE=false #optional
+      - PUID=1000 #optional
 
 #
 # nzbget
