--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
       - /home/centos/letsencrypt:/config
       - /home/centos/lightsail-htpc/nginx:/config/nginx/site-confs/default
     depends_on:
-      - "no-ip"
+      - "duckdns"
       - "sonarr"
       - "radarr"
       - "bazarr"
