--- a/nzbget.conf
+++ b/nzbget.conf
@@ -157,7 +157,7 @@ Server1.Active=yes
 #
 # The name is used in UI and for logging. It can be any string, you
 # may even leave it empty.
-Server1.Name=xennews
+Server1.Name=usenetserver
 
 # Level (priority) of news server (0-99).
 #
@@ -197,7 +197,7 @@ Server1.Optional=no
 Server1.Group=0
 
 # Host name of news server.
-Server1.Host=ssl.xennews.com
+Server1.Host=secure.usenetserver.com
 
 # Port to connect to (1-65535).
 Server1.Port=563
