--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,6 +101,10 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=${TZ}
+      - TRANSMISSION_RPC_WHITELIST_ENABLED=true
+      - TRANSMISSION_RPC_HOST_WHITELIST_ENABLED=true
+      - TRANSMISSION_RPC_HOST_WHITELIST=172.20.x.x
+      - TRANSMISSION_RPC_WHITELIST=172.20.x.x
     volumes:
       - /home/centos/transmission:/config
       - /home/centos/downloads/complete:/downloads
