--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -92,7 +92,7 @@ services:
 
 #
 # deluge
-# BitTorrent client.
+# Deluge is a lightweight, Free Software, cross-platform BitTorrent client.
 #
   deluge:
     image: linuxserver/deluge
@@ -122,6 +122,8 @@ services:
     volumes:
       - /home/centos/jackett:/config
       - /home/centos/watch:/downloads
+    ports:
+      - 9117:9117
     networks:
       - app_net
 
@@ -146,6 +148,7 @@ services:
       - TZ=${TZ}
     extra_hosts:
       - "plex:${HOST_IP}"
+      - "deluge:${HOST_IP}"
     depends_on:
       - "nzbget"
     networks:
@@ -175,6 +178,7 @@ services:
       - TZ=${TZ}
     extra_hosts:
       - "plex:${HOST_IP}"
+      - "deluge:${HOST_IP}"
     depends_on:
       - "nzbget"
     networks:
